--- a/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBLJSViewCompiler.xcscheme
+++ b/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBLJSViewCompiler.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0820"
+   LastUpgradeVersion = "1030"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "27452BB71AB1180800327776"
-               BuildableName = "CouchbaseLite.framework"
-               BlueprintName = "CBL iOS framework"
+               BlueprintIdentifier = "930FE55D1C58562B008107A0"
+               BuildableName = "libCBLJSViewCompiler.a"
+               BlueprintName = "CBLJSViewCompiler"
                ReferencedContainer = "container:CouchbaseLite.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -29,9 +29,11 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -43,12 +45,14 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "27452BB71AB1180800327776"
-            BuildableName = "CouchbaseLite.framework"
-            BlueprintName = "CBL iOS framework"
+            BlueprintIdentifier = "930FE55D1C58562B008107A0"
+            BuildableName = "libCBLJSViewCompiler.a"
+            BlueprintName = "CBLJSViewCompiler"
             ReferencedContainer = "container:CouchbaseLite.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -59,9 +63,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "27452BB71AB1180800327776"
-            BuildableName = "CouchbaseLite.framework"
-            BlueprintName = "CBL iOS framework"
+            BlueprintIdentifier = "930FE55D1C58562B008107A0"
+            BuildableName = "libCBLJSViewCompiler.a"
+            BlueprintName = "CBLJSViewCompiler"
             ReferencedContainer = "container:CouchbaseLite.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
