--- a/Source/CouchbaseLite-Info.plist
+++ b/Source/CouchbaseLite-Info.plist
@@ -21,6 +21,6 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>${CURRENT_PROJECT_VERSION}.0.0</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 </dict>
 </plist>
